<resources>
    <string name="app_name">MapsApp</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>

    <string name="MAPS_API_KEY" translatable="false">AIzaSyAQInTQFUMVjpuuG8kSlawldFfP0Dy6smc</string>

    <string name="aubergine_label">Aubergine Map</string>
    <string name="normal_label">Normal Map</string>
    <string name="terrain_label">Terrain Map</string>
    <string name="satellite_label">Satellite Map</string>
    <string name="hybrid_label">Hybrid Map</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>


</resources>