<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/normal_map"
        android:title="@string/normal_label"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/aubergine_map"
        android:title="@string/aubergine_label"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/hybrid_map"
        android:title="@string/hybrid_label"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/terrain_map"
        android:title="@string/terrain_label"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/sattelite_map"
        android:title="@string/satellite_label"
        app:showAsAction="never"/>

</menu>